--- a/app/src/main/res/layout/shrimmer_gallery_layout.xml
+++ b/app/src/main/res/layout/shrimmer_gallery_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#ffffff"
@@ -17,16 +18,79 @@
             android:gravity="center"
             android:orientation="vertical">
 
-            <include layout="@layout/shrimmer_gallery_item"/>
-            <include layout="@layout/shrimmer_gallery_item"/>
-            <include layout="@layout/shrimmer_gallery_item"/>
-            <include layout="@layout/shrimmer_gallery_item"/>
-            <include layout="@layout/shrimmer_gallery_item"/>
+            <com.google.android.material.card.MaterialCardView
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                app:cardBackgroundColor="#dddddd">
+
+               <androidx.appcompat.widget.LinearLayoutCompat
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent"
+                   android:gravity="center|right"
+                   android:orientation="vertical"
+                   android:padding="16dp">
+
+
+                   <com.google.android.material.card.MaterialCardView
+                       android:layout_width="100dp"
+                       android:layout_height="10dp"
+                       app:cardBackgroundColor="#B3B3B3"
+                       android:layout_marginRight="10dp"
+                       app:cardElevation="0dp"
+                       app:cardCornerRadius="7dp"
+                       app:contentPadding="7dp" />
+
+                   <com.google.android.material.card.MaterialCardView
+                       android:layout_width="match_parent"
+                       android:layout_height="10dp"
+                       app:cardBackgroundColor="#B3B3B3"
+                       android:layout_marginTop="12dp"
+                       android:layout_marginRight="10dp"
+                       app:cardElevation="0dp"
+                       app:cardCornerRadius="7dp"
+                       app:contentPadding="7dp" />
+
+                   <com.google.android.material.card.MaterialCardView
+                       android:layout_width="match_parent"
+                       android:layout_height="10dp"
+                       app:cardBackgroundColor="#B3B3B3"
+                       android:layout_marginTop="7dp"
+                       android:layout_marginRight="10dp"
+                       app:cardElevation="0dp"
+                       app:cardCornerRadius="7dp"
+                       app:contentPadding="7dp" />
+
+                   <com.google.android.material.card.MaterialCardView
+                       android:layout_width="match_parent"
+                       android:layout_height="10dp"
+                       app:cardBackgroundColor="#B3B3B3"
+                       android:layout_marginTop="7dp"
+                       android:layout_marginRight="10dp"
+                       app:cardElevation="0dp"
+                       app:cardCornerRadius="7dp"
+                       app:contentPadding="7dp" />
+
+
+
+               </androidx.appcompat.widget.LinearLayoutCompat>
+
+            </com.google.android.material.card.MaterialCardView>
+
+            <include layout="@layout/shrimmer_gallery_item" />
+
+            <include layout="@layout/shrimmer_gallery_item" />
+
+            <include layout="@layout/shrimmer_gallery_item" />
+
+            <include layout="@layout/shrimmer_gallery_item" />
+
+            <include layout="@layout/shrimmer_gallery_item" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </ScrollView>
-
 
 
 </LinearLayout>
