--- a/app/src/main/res/layout/item_list_my_download.xml
+++ b/app/src/main/res/layout/item_list_my_download.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view_item_my_download"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="7dp"
-    android:layout_marginTop="7dp"
+    android:layout_height="150dp"
+    android:layout_marginStart="4dp"
+    android:layout_marginTop="4dp"
     app:cardCornerRadius="15dp"
     app:cardElevation="5dp">
 
@@ -20,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:minHeight="200dp" />
+        android:scaleType="centerCrop"
+        android:minHeight="150dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -29,12 +30,12 @@
         android:layout_gravity="bottom">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="7dp"
-            app:cardBackgroundColor="#F2FFFFFF"
-            app:cardCornerRadius="13dp"
+            android:layout_margin="6dp"
+            app:cardBackgroundColor="#E6FFFFFF"
+            app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -42,9 +43,11 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
                 android:gravity="center"
+                android:paddingTop="3dp"
+                android:paddingBottom="3dp"
                 android:orientation="horizontal"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp">
 
                 <TextView
                     android:id="@+id/text_view_quality"
@@ -52,14 +55,10 @@
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:textColor="@color/purple_200"
-                    android:textSize="13dp"
+                    android:textSize="11dp"
                     android:textStyle="bold"
                     tools:text="Full-HD" />
 
-                <Space
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
 
                 <TextView
                     android:id="@+id/text_view_file_size"
@@ -67,9 +66,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginLeft="7dp"
                     android:gravity="center"
-                    android:textColor="@color/purple_200"
                     android:textSize="10dp"
-                    android:textStyle="bold"
                     tools:text="9.33 MB" />
 
 
