--- a/app/src/main/res/layout/item_list_my_download.xml
+++ b/app/src/main/res/layout/item_list_my_download.xml
@@ -5,9 +5,7 @@
     android:id="@+id/card_view_item_my_download"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_marginStart="4dp"
-    android:layout_marginTop="4dp"
-    app:cardCornerRadius="15dp"
+    app:cardCornerRadius="0dp"
     app:cardElevation="5dp">
 
     <View
@@ -33,8 +31,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="6dp"
-            app:cardBackgroundColor="#E6FFFFFF"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            app:cardBackgroundColor="#CCFFFFFF"
             app:cardCornerRadius="10dp"
             app:cardElevation="0dp">
 
