--- a/app/src/main/res/drawable/shape_logo.xml
+++ b/app/src/main/res/drawable/shape_logo.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:angle="45"
-        android:endColor="#8f4aad"
-        android:centerColor="#df3379"
-        android:startColor="#fca145" />
+        android:angle="-45"
+        android:endColor="#3C9FF2"
+        android:startColor="#F003AE" />
+
     <corners android:radius="15dp" />
 
 </shape>
