--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -25,5 +25,7 @@
     <color name="color_download_button">#2eac68</color>
     <color name="color_download_popup">#2eac68</color>
     <color name="color_background_card_icon_delete_share">#0D1C27</color>
+    <color name="color_background_edittext_otp">#80F6A640</color>
+
 
 </resources>
