--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -33,7 +33,11 @@
             app:popExitAnim="@anim/to_right"/>
         <action
             android:id="@+id/action_galleryFragment_to_authFragment"
-            app:destination="@id/authFragment" />
+            app:destination="@id/loginFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right"/>
     </fragment>
     <fragment
         android:id="@+id/detailsFragment"
@@ -74,7 +78,19 @@
             app:destination="@id/detailsFragment" />
     </fragment>
     <fragment
-        android:id="@+id/authFragment"
-        android:name="com.javadEsl.pixel.ui.auth.AuthFragment"
-        android:label="AuthFragment" />
+        android:id="@+id/loginFragment"
+        android:name="com.javadEsl.pixel.ui.auth.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_authFragment_to_registerFragment"
+            app:destination="@id/registerFragment"
+            app:enterAnim="@anim/from_right"
+            app:exitAnim="@anim/to_left"
+            app:popEnterAnim="@anim/from_left"
+            app:popExitAnim="@anim/to_right"/>
+    </fragment>
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.javadEsl.pixel.ui.auth.RegisterFragment"
+        android:label="RegisterFragment" />
 </navigation>
